--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
 
     services:
       database:
-        image: postgresql/9.4
+        image: postgresql:9.4
       conjur:
         image: cyberark/conjur
         env:
