--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           CONJUR_DATA_KEY: testdatakey
       client:
         image: cyberark/conjur-cli:5
-        options: --entrypoint="sleep infinity"
+        options: --entrypoint="/bin/bash sleep infinity"
 
     steps:
       - name: Check containers deployed
