--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Use CyberArk Conjur Secret Fetcher
         uses: ./
-        with:
+        args:
           url: ${{ secrets.CONJUR_URL }}
           account: cyberarkdemo
           host_id: ${{ secrets.CONJUR_USERNAME }}
