--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
           api_key: ${{ secrets.CONJUR_API_KEY }}
           secrets: db/sqlusername | sql_username; db/sql_password
       - name: Check Environment Outside Docker Container for Secret Masking
-        run: env
+        run: env | grep SQL_
