--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
 name: conjur-action Test
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+  schedule:
+    - cron: 0 0 ? * *
 
 jobs:
   test:
